# projeto/documentacao/api.yaml
@@ -1297,8 +1297,8 @@ paths:
           description: Compra não encontrada
       security:
         - api_key:
-            - write:vendedores
-            - read:vendedores        
+            - write:compras
+            - read:compras        
     delete:
       tags:
         - Compras
@@ -1381,8 +1381,8 @@ paths:
           description: Acesso negado
       security:
         - api_key:
-            - write:compra
-            - read:compra  
+            - write:compras
+            - read:compras  
   /compras/exportar/listagem:
     get:
       tags:
@@ -1403,8 +1403,8 @@ paths:
           description: Acesso negado
       security:
         - api_key:
-            - write:compra
-            - read:compra        
+            - write:compras
+            - read:compras        
   /vendas:
     get:
       tags:
@@ -1550,6 +1550,42 @@ paths:
         - api_key:
             - write:vendas
             - read:vendas   
+    put:
+      tags:
+        - Vendas
+      summary: Atualiza a venda informada pelo id
+      operationId: updateVenda
+      requestBody:
+        description: Dados da venda para ser atualizada
+        required: true
+        content:
+          application/json:
+            schema:
+                allOf: 
+                  - $ref: '#/components/schemas/Venda'
+                  - type: object
+                    properties:
+                      itensVenda:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/ItemVenda'
+                    required: 
+                        - itensVenda
+      responses:
+        '200':
+          description: Operação com sucesso
+        '400':
+          description: Foi fornecido um ID inválido
+        '401':
+          description: Usuário não está logado
+        '403':
+          description: Acesso negado ao usuário
+        '404':
+          description: Venda não encontrada
+      security:
+        - api_key:
+            - write:vendas
+            - read:vendas                 
     delete:
       tags:
         - Vendas
